<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlarmActivity"
    android:background="@color/backPage">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tlbAlarm"
        android:layout_width="0dp"
        android:layout_height="@dimen/DefaultSizeAppBar"
        android:background="@color/colorPrimary"
        android:elevation="@dimen/DefaultSizeElevationAppBar"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/LauncherTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:layout_marginBottom="89dp"
        android:text="@string/txtAlarm"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editHour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editHour"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:layout_marginBottom="70dp"
        android:ems="10"
        android:hint="@string/txtEditHour"
        android:inputType="time"
        android:textAlignment="center"
        android:textSize="@dimen/DefaultSizeTextBody"
        app:layout_constraintBottom_toTopOf="@+id/editMin"
        app:layout_constraintEnd_toEndOf="@+id/editMin"
        app:layout_constraintStart_toStartOf="@+id/editMin"
        app:layout_constraintTop_toBottomOf="@+id/txtAlarm" />

    <Button
        android:id="@+id/btnSetAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="182dp"
        android:text="@string/txtBtnSetAlarm"
        android:textSize="@dimen/DefaultSizeTextButton"
        android:background="@drawable/selector_button"
        android:textColor="@color/colorTextButtonPrimary"        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editMin" />

    <EditText
        android:id="@+id/editMin"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:layout_marginBottom="60dp"
        android:ems="10"
        android:hint="@string/txtEditMinutes"
        android:inputType="time"
        android:textAlignment="center"
        android:textSize="@dimen/DefaultSizeTextBody"
        app:layout_constraintBottom_toTopOf="@+id/btnSetAlarm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editHour" />
</androidx.constraintlayout.widget.ConstraintLayout>
